ハッカソンで作成した制作物をカードに表示させました。

--- a/mysite/pages/templates/pages/work.html
+++ b/mysite/pages/templates/pages/work.html
@@ -28,13 +28,17 @@
                 <span class="left"></span>
                 <span class="right"></span>
             </a>
-            <p class="card_timecategory"><time class="pubdate entry-time dfont" itemprop="datePublished" datetime="2021-10-16">2021年10月16日</time></p>
-            <p class="card_htitle">カードのタイトルカードのタイトルカードのタイトル</p>
+            <p class="card_timecategory"><time class="pubdate entry-time dfont" itemprop="datePublished" datetime="2024-9-25">2024年9月25日</time></p>
+            <p class="card_htitle">【ハッカソン】宮崎企業マッチング</p>
             </div>
             <div class="card-flap flap1">
-            <div class="card-description">ダミーテキストダミーテキストダミーテキストダミーテキストダミーテキストダミーテキストダミーテキストダミーテキスト</div>
+            <div class="card-description">
+                宮崎県の企業を知ってもらうために、マッチングアプリのように表示される宮崎の企業に対し、
+                Good!とBad!を選択し、最終的にユーザーにおすすめする企業を提示する、WEBアプリです。<br>
+                宮崎の就職率を上げるためには？をテーマを軸にハッカソンにてチーム開発したWebアプリです。
+            </div>
             <div class="card-flap flap2">
-                <div class="card-actions"> <a href="#" class="btn7">記事を見る</a> </div>
+                <div class="card-actions"> <a href="{% url 'show_company' 0 %}" class="btn7">のぞきに行く</a> </div>
             </div>
             </div>
         </li>
