--- a/mysite/pages/templates/pages/work.html
+++ b/mysite/pages/templates/pages/work.html
@@ -50,49 +50,49 @@
                 <span class="left"></span>
                 <span class="right"></span>
             </a>
-            <p class="card_timecategory"><time class="pubdate entry-time dfont" itemprop="datePublished" datetime="2021-10-16">2021年10月16日</time></p>
-            <p class="card_htitle">カードのタイトルカードのタイトルカードのタイトルカードのタイトルカードのタイトル</p>
+            <p class="card_timecategory"><time class="pubdate entry-time dfont" itemprop="datePublished" datetime="2021-10-16">Coming soon</time></p>
+            <p class="card_htitle">スクレイピング</p>
             </div>
             <div class="card-flap flap1">
-            <div class="card-description">ダミーテキストダミーテキストダミーテキストダミーテキストダミーテキストダミーテキスト</div>
+            <div class="card-description">開発中です！</div>
             <div class="card-flap flap2">
-                <div class="card-actions"> <a href="#" class="btn7">記事を見る</a> </div>
+                <div class="card-actions"> <a href="#" class="btn7">のぞきに行く</a> </div>
             </div>
             </div>
         </li>
         <!-- card -->
         <!-- card -->
         <li class="card7">
-            <div class="card__image-holder"> <img class="card__image" src="https://dubdesign.net/wp-content/uploads/2021/08/jqueryheader_eyecatch-1024x587.jpg" alt="アイキャッチ画像"> </div>
+            <div class="card__image-holder"> <img class="card__image" src="https://dubdesign.net/wp-content/uploads/2021/10/restapi-afceyecatch-1024x587.jpg" alt="アイキャッチ画像"> </div>
             <div class="card-title"> <a href="#" class="toggle-info btn7">
                 <span class="left"></span>
                 <span class="right"></span>
             </a>
-            <p class="card_timecategory"><time class="pubdate entry-time dfont" itemprop="datePublished" datetime="2021-10-16">2021年10月16日</time></p>
-            <p class="card_htitle">カードのタイトル</p>
+            <p class="card_timecategory"><time class="pubdate entry-time dfont" itemprop="datePublished" datetime="2021-10-16">Coming soon</time></p>
+            <p class="card_htitle">顔認証ログインシステム</p>
             </div>
             <div class="card-flap flap1">
-            <div class="card-description">ダミーテキストダミーテキストダミーテキストダミーテキストダミーテキストダミーテキストダミーテキストダミーテキストダミーテキストダミーテキストダミーテキストダミーテキストダミーテキスト</div>
+            <div class="card-description">開発中です！</div>
             <div class="card-flap flap2">
-                <div class="card-actions"> <a href="#" class="btn7">記事を見る</a> </div>
+                <div class="card-actions"> <a href="#" class="btn7">のぞきに行く</a> </div>
             </div>
             </div>
         </li>
         <!-- card -->
         <!-- card -->
         <li class="card7">
-            <div class="card__image-holder"> <img class="card__image" src="https://dubdesign.net/wp-content/uploads/2021/09/sliderimage_eyecatch-1024x587.jpg" alt="アイキャッチ画像"> </div>
+            <div class="card__image-holder"> <img class="card__image" src="https://dubdesign.net/wp-content/uploads/2021/10/restapi-afceyecatch-1024x587.jpg" alt="アイキャッチ画像"> </div>
             <div class="card-title"> <a href="#" class="toggle-info btn7">
                 <span class="left"></span>
                 <span class="right"></span>
             </a>
-            <p class="card_timecategory"><time class="pubdate entry-time dfont" itemprop="datePublished" datetime="2021-10-16">2021年10月16日</time></p>
-            <p class="card_htitle">カードのタイトルカードのタイトルカードのタイトルカードのタイトルカードのタイトル</p>
+            <p class="card_timecategory"><time class="pubdate entry-time dfont" itemprop="datePublished" datetime="2021-10-16">Coming soon</time></p>
+            <p class="card_htitle">ごみ出し日をLINEで通知システム</p>
             </div>
             <div class="card-flap flap1">
-            <div class="card-description">ダミーテキストダミーテキストダミーテキストダミーテキストダミーテキストダミーテキスト</div>
+            <div class="card-description">開発中です！</div>
             <div class="card-flap flap2">
-                <div class="card-actions"> <a href="#" class="btn7">記事を見る</a> </div>
+                <div class="card-actions"> <a href="#" class="btn7">のぞきに行く</a> </div>
             </div>
             </div>
         </li>
