制作物ページをあらかた完成させました。

--- a/mysite/pages/templates/pages/index.html
+++ b/mysite/pages/templates/pages/index.html
@@ -43,7 +43,7 @@
         </div>
         <div class = "item">
             <div class="button">
-                <a href="{% url 'show_company' 0 %}">制作物</a>
+                <a href="{% url 'work' %}">制作物</a>
             </div>
             <br>
             <p>今までの活動履歴が見ることができます。ハッカソンに参加した際の開発物や、自由気ままに作ったてきとうな作品まで、幅広く載せています。
