--- a/mysite/pages/templates/pages/work.html
+++ b/mysite/pages/templates/pages/work.html
@@ -23,7 +23,7 @@
     <ul class="cards7">
         <!-- card -->
         <li class="card7">
-            <div class="card__image-holder"> <img class="card__image" src="https://dubdesign.net/wp-content/uploads/2021/03/jquerymatome_eyecatch-1024x587.jpg" alt="アイキャッチ画像"> </div>
+            <div class="card__image-holder"> <img class="card__image" src="{% static 'pages/images/com_match.png' %}" alt="宮崎企業マッチング"> </div>
             <div class="card-title"> <a href="#" class="toggle-info btn7">
                 <span class="left"></span>
                 <span class="right"></span>
@@ -33,8 +33,9 @@
             </div>
             <div class="card-flap flap1">
             <div class="card-description">
-                宮崎県の企業を知ってもらうために、マッチングアプリのように表示される宮崎の企業に対し、
+                マッチングアプリのように表示される宮崎の企業に対し、
                 Good!とBad!を選択し、最終的にユーザーにおすすめする企業を提示する、WEBアプリです。<br>
+                <br>
                 宮崎の就職率を上げるためには？をテーマを軸にハッカソンにてチーム開発したWebアプリです。
             </div>
             <div class="card-flap flap2">
@@ -45,7 +46,7 @@
         <!-- card -->
         <!-- card -->
         <li class="card7">
-            <div class="card__image-holder"> <img class="card__image" src="https://dubdesign.net/wp-content/uploads/2021/10/restapi-afceyecatch-1024x587.jpg" alt="アイキャッチ画像"> </div>
+            <div class="card__image-holder"> <img class="card__image" src="{% static 'pages/images/development.png' %}" alt="開発中"> </div>
             <div class="card-title"> <a href="#" class="toggle-info btn7">
                 <span class="left"></span>
                 <span class="right"></span>
@@ -63,7 +64,7 @@
         <!-- card -->
         <!-- card -->
         <li class="card7">
-            <div class="card__image-holder"> <img class="card__image" src="https://dubdesign.net/wp-content/uploads/2021/10/restapi-afceyecatch-1024x587.jpg" alt="アイキャッチ画像"> </div>
+            <div class="card__image-holder"> <img class="card__image" src="{% static 'pages/images/development.png' %}" alt="開発中"> </div>
             <div class="card-title"> <a href="#" class="toggle-info btn7">
                 <span class="left"></span>
                 <span class="right"></span>
@@ -81,7 +82,7 @@
         <!-- card -->
         <!-- card -->
         <li class="card7">
-            <div class="card__image-holder"> <img class="card__image" src="https://dubdesign.net/wp-content/uploads/2021/10/restapi-afceyecatch-1024x587.jpg" alt="アイキャッチ画像"> </div>
+            <div class="card__image-holder"> <img class="card__image" src="{% static 'pages/images/development.png' %}" alt="開発中"> </div>
             <div class="card-title"> <a href="#" class="toggle-info btn7">
                 <span class="left"></span>
                 <span class="right"></span>
