制作物のアニメーションと画像を修正しました。

--- a/mysite/pages/templates/pages/introduction.html
+++ b/mysite/pages/templates/pages/introduction.html
@@ -21,7 +21,7 @@
 
 <section class="additional-content original-gradient">
     <section id="profile" class="section-profile">
-        <h1>Introduction</h1>
+        <h1 class="scroll_up">Introduction</h1>
         <div class="section-profile__wrapper">
             <div class="profile__image scroll_right"><img src="{% static 'pages/images/my_photo.jpg' %}" alt="photo"></div>
             <div class="section-profile__description">
