--- a/mysite/pages/templates/pages/work.html
+++ b/mysite/pages/templates/pages/work.html
@@ -19,8 +19,8 @@
 </section>
 
 <div class="additional-content-work  original-gradient">
-    <h2>Work</h2>
-    <ul class="cards7">
+    <h2 class="scroll_up">Work</h2>
+    <ul class="cards7 scroll_left">
         <!-- card -->
         <li class="card7">
             <div class="card__image-holder"> <img class="card__image" src="{% static 'pages/images/com_match.png' %}" alt="宮崎企業マッチング"> </div>
