--- a/mysite/pages/templates/pages/index.html
+++ b/mysite/pages/templates/pages/index.html
@@ -12,23 +12,23 @@
             <!-- 動画ファイルがロードできなかった場合に表示するメッセージ -->
             Your browser does not support the video tag.
     </video>
-    <div class="home-content wrapper scroll_left">
+    <div class="home-content scroll_left">
         <h2 class="page-title extinction">ようこそ、私のホームページへ</h2>
         <h2 class="page-title appearance hidden">Step into My Site</h2>
     </div>
 </section>
 
 <section class="additional-content original-gradient">
-    <div class="content-section scroll_up">
+    <div class="scroll_up">
         <h2 class="section-title">Helllo! There!</h2>
         <br>
         <p class="section-text">
-            このWebサイトは、私、Taishiのポートフォリオサイトです！<br>
-            正直、「自分、地元では"路上の伝説"って呼ばれてました！」
-            みたいなおもろそうな人生送ってません。。平凡of平凡の人生歩んでるので、面白味のかけらもないWebサイトです。<br>
-            ただ、Webサイトを作ってみたい！という欲望だけで作りました。
-            なので、謎の動画やアニメーションがふんだんに利用されていますが、ご了承ください。
-        </p>    
+            ようこそ！私、Taishiのポートフォリオサイトへ！<br>
+            なんかカッコイイホームページ作りたいな～とふと思い、
+            「よし！自分のホームページ作ろ！」と奮起し、作り始めました。
+            WEBフレームワークには、Djangoを使っています。<br>
+            ちなみに、地元では神童と呼ばれてた、みたいな凄いエピソードもないので、内容うっすいサイトですが、ご了承ください！笑
+        </p>   
     </div>               
 </section>
 
