--- a/mysite/pages/templates/pages/work.html
+++ b/mysite/pages/templates/pages/work.html
@@ -12,7 +12,7 @@
             <!-- 動画ファイルがロードできなかった場合に表示するメッセージ -->
             Your browser does not support the video tag.
     </video>
-    <div class="home-content wrapper scroll_left">
+    <div class="home-content scroll_left">
         <h2 class="page-title extinction">制作物</h2>
         <h2 class="page-title appearance hidden">Work</h2>
     </div>
