--- a/mysite/pages/templates/pages/introduction.html
+++ b/mysite/pages/templates/pages/introduction.html
@@ -12,7 +12,7 @@
             <!-- 動画ファイルがロードできなかった場合に表示するメッセージ -->
             Your browser does not support the video tag.
     </video>
-    <div class="home-content wrapper scroll_left">
+    <div class="home-content scroll_left">
         <h2 class="page-title extinction">私について</h2>
         <h2 class="page-title appearance hidden">About Me</h2>
     </div>
@@ -20,7 +20,7 @@
 
 
 <section class="additional-content original-gradient">
-    <section id="profile" class="section-profile">
+    <section class="section-profile">
         <h1 class="scroll_up">Introduction</h1>
         <div class="section-profile__wrapper">
             <div class="profile__image scroll_right"><img src="{% static 'pages/images/my_photo.jpg' %}" alt="photo"></div>
@@ -50,25 +50,23 @@
         <div class="period">⚫︎幼少期</div>
         <div class="story-summary">超かわいかった</div>
         <div class="period1-img"><img src="{% static 'pages/images/boys.jpg' %}" alt="AIで作った男の子"></div>
-        <p> 今の自分とは想像がつかないレベルで可愛かった。まじで。<br>
+        <p> めっちゃ可愛かった。<br>
             <br>
-            ちなみに画像のかわいらしい男の子は私と無関係。AIで作った。
+            ※ 画像の可愛い男の子はイメージです。AIで作った。
         </li>
         <li>
         <div class="period">⚫︎小学生</div>
         <div class="story-summary">ビットコインを発明</div>
         <div class="period2-img"><img src="{% static 'pages/images/soroban.png' %}" alt="そろばんをしている男の子"></div>
-        <p>ビットコインの発明者が不明であり、未だ誰なのか世界中で議論されているが、実は私が小１のころに作った。サトシ・ナカモトは私の第二人格だ。<br>
+        <p>ビットコインの発明者が不明であり、未だ誰なのか世界中で議論されているが、実は私が小１のころに作った。I'm サトシ・ナカモト<br>
             <br>
             そろばん教室に通っていた。普通、暗算する際は、頭の中でそろばんを想像して計算するのが一般的だが、頭が悪すぎて普通に頭の中で筆算をして暗算していた。そのため、全く暗算が得意ではない。 </p>
         </li>
         <li>
         <div class="period">⚫︎中学生</div>
-        <div class="story-summary">バスケ部に入る</div>
+        <div class="story-summary">特になし</div>
         <div class="period3-img"><img src="{% static 'pages/images/zeikin.png' %}" alt="税金泥棒"></div>
-        <p>全く運動好きでも得意でもないのに、バスケ部に入る。ちなみに、スラムダンクも黒子のバスケも全く見たことない。<br>
-            <br>
-            将来の夢は公務員。とかいうくそつまらん将来像を描いていた。 </p>
+        <p>バスケ部に入った。ちなみに、スラムダンクも黒子のバスケも全く見たことない。<br>
         </li>
         <li>
         <div class="period">⚫︎高校生</div>
@@ -76,13 +74,12 @@
         <div class="period4-img"><img src="{% static 'pages/images/kyudou.png' %}" alt="弓道の画像"></div>
         <p>日本人であるならば、武道を嗜むべきだ。という熱い大和魂が突如現れ、弓道部に入る。ほんとは、運動しないけど、一応運動部の括りに入るっぽいから入部した。<br>
             <br>
-            高校卒業する２か月前に、急遽宮崎へと進学決まる。人生何があるかわかりません。と感じた。</p>
         </li>
         <li>
         <div class="period">⚫︎現在</div>
-        <div class="story-summary">大学生</div>
+        <div class="story-summary">情報学科の大学生になる</div>
         <div class="period5-img"><img src="{% static 'pages/images/neet.png' %}" alt="ニート"></div>
-        <p>現在、宮崎大学でしがないプログラマーをしている。<br>
+        <p>現在、宮崎大学でしがないプログラマーをしている。今興味あるのは、Flaskと機械学習。あと、マッチングアプリをいつか作りたい。<br>
         </li>
     </ul>
   </section>
