--- a/mysite/pages/templates/pages/ga.html
+++ b/mysite/pages/templates/pages/ga.html
@@ -1,9 +1,9 @@
-<script async src="https://www.googletagmanager.com/gtag/js?id=G-LV03NDG949"></script>
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-T9Y2METRN2"></script>
 <script>
   window.dataLayer = window.dataLayer || [];
   function gtag(){dataLayer.push(arguments);}
   gtag('js', new Date());
 
-  gtag('config', 'G-LV03NDG949');
+  gtag('config', 'G-T9Y2METRN2');
 </script>
 
