htmlの文章を修正しましtあ。

--- a/mysite/pages/templates/pages/index.html
+++ b/mysite/pages/templates/pages/index.html
@@ -24,10 +24,9 @@
         <br>
         <p class="section-text">
             ようこそ！私、Taishiのポートフォリオサイトへ！<br>
-            なんかカッコイイホームページ作りたいな～とふと思い、
-            「よし！自分のホームページ作ろ！」と奮起し、作り始めました。
-            WEBフレームワークには、Djangoを使っています。<br>
-            ちなみに、地元では神童と呼ばれてた、みたいな凄いエピソードもないので、内容うっすいサイトですが、ご了承ください！笑
+            田舎大学在学のしがない情報学生です！<br>
+            自分のホームページあったら有名人ぽくね？！と思い立ち、このサイトを作り始めました。
+            ちなみに、地元で神童と呼ばれてた、みたいな凄いエピソードもないので、内容うっすいサイトですが、ご了承ください！笑
         </p>   
     </div>               
 </section>
@@ -53,7 +52,7 @@
                 <a href="{% url 'contact' %}">問い合わせ</a>
             </div>
             <br>
-            <p>私に興味を持った方がいたら、ぜひご連絡お待ちしております。SNSのリンクなども張っております。
+            <p>私に興味を持った方がいたら、ぜひご連絡お待ちしております。SNSのリンクなども載せております。
         </div>
     </div>
 </section>
