--- a/mysite/pages/templates/pages/introduction.html
+++ b/mysite/pages/templates/pages/introduction.html
@@ -31,9 +31,9 @@
                         <h3>-本名非公開-</h3>
                     </div>
                     <p>2003年静岡県生まれ。<br>
-                        静岡県の富士山のふもとで生まれ、現在宮崎大学に通っている学生。
-                        Pythonを触りたい延長線上で、WEBフレームワークのDjangoを始める。
-                        将来、X, Instagramを超えるSNSを作る予定。
+                        静岡県の富士山のふもとで生まれ、現在田舎大学に通っている学生。
+                        Pythonが流行っているらしい、という単純な理由で、WEBフレームワークもPythonがプログラミング言語のDjangoを始める。
+                        将来、イーロンマスクを超える予定。<br>
                         初心者プログラマーなので、温かい目で応援してくださいm(__)m
                     </p>
                 </div>
@@ -59,9 +59,6 @@
         <div class="story-summary">ビットコインを発明</div>
         <div class="period2-img"><img src="{% static 'pages/images/soroban.png' %}" alt="そろばんをしている男の子"></div>
         <p>ビットコインの発明者が不明であり、未だ誰なのか世界中で議論されているが、実は私が小１のころに作った。I'm サトシ・ナカモト<br>
-            <br>
-            そろばん教室に通っていた。普通、暗算する際は、頭の中でそろばんを想像して計算するのが一般的だが、頭が悪すぎて普通に頭の中で筆算をして暗算していた。そのため、全く暗算が得意ではない。 </p>
-        </li>
         <li>
         <div class="period">⚫︎中学生</div>
         <div class="story-summary">特になし</div>
@@ -79,7 +76,7 @@
         <div class="period">⚫︎現在</div>
         <div class="story-summary">情報学科の大学生になる</div>
         <div class="period5-img"><img src="{% static 'pages/images/neet.png' %}" alt="ニート"></div>
-        <p>現在、宮崎大学でしがないプログラマーをしている。今興味あるのは、Flaskと機械学習。あと、マッチングアプリをいつか作りたい。<br>
+        <p>現在、田舎大学でしがないプログラマーをしている。今興味あるのは、Flaskと機械学習。あと、マッチングアプリをいつか作りたい。<br>
         </li>
     </ul>
   </section>
